# Jetson_nano_X1

./: .gitignore  AGENTS.md  README.md  github_bak.md
README/: YOLOv11_快速开始.md  (+1 more)
ROS_Project/src/common_utils/: package.xml
ROS_Project/src/common_utils/scripts/: config_loader_lib.py  logger_utils_lib.py
ROS_Project/src/common_utils/src/: logger.cpp
ROS_Project/src/gpio_control/: package.xml
ROS_Project/src/gpio_control/config/: gpio_config_jetson.yaml
ROS_Project/src/gpio_control/scripts/: gpio_control_node.py  gpio_control_node_jetson.py  gpio_test_node.py
ROS_Project/src/gpio_control/src/: gpio_manager.cpp
ROS_Project/src/gpio_control/srv/: GPIOControl.srv
ROS_Project/src/opencv_processing/: CMakeLists.txt
ROS_Project/src/opencv_processing/scripts/: camera_node.py
action_ws/install/share/maita_can_comm/: package.xml
action_ws/src/balance_control/: CMakeLists.txt  README.md  package.xml
action_ws/src/balance_control/action/: BalanceControl.action
action_ws/src/balance_control/algorithms/: adp_controller.cpp  adp_controller.h  balance_algorithm_base.h  kinematics_test.cpp  lqr_controller.cpp  lqr_controller.h  mpc_controller.cpp  mpc_controller.h  vmc_controller.cpp  vmc_controller.h  wheeled_legged_kinematics.h
action_ws/src/balance_control/cfg/: BalanceControl.cfg  robot.urdf
action_ws/src/balance_control/config/: robot_config.yaml  robot_hardware_params.yaml  wheeled_legged_kinematics.yaml
action_ws/src/balance_control/include/: robot_command_client.h  robot_hardware_params.h
action_ws/src/balance_control/launch/: balance_control.launch  balance_control_test.launch
action_ws/src/balance_control/msg/: RobotCommand.msg
action_ws/src/balance_control/scripts/: robot_cli.py  robot_command_client.py  robot_keyboard_teleop.py
action_ws/src/balance_control/src/: balance_control_server.cpp  balance_control_test.cpp  robot_command_client.cpp  robot_hardware_params.cpp
action_ws/src/balance_control/test/: balance_physics_demo.py  kinematics_validation_test  kinematics_validation_test.cpp  run_tests.sh  test_balance_control  test_balance_control.cpp
action_ws/src/dcu_driver_pkg/: CMakeLists.txt  README.md  package.xml  电机硬件连接和参数.md
action_ws/src/dcu_driver_pkg/action/: DCUControl.action
action_ws/src/dcu_driver_pkg/cfg/: dcu_cfg.yaml
action_ws/src/dcu_driver_pkg/launch/: dcu_driver_client.launch  dcu_driver_server.launch
action_ws/src/dcu_driver_pkg/msg/: MotorCommand.msg
action_ws/src/dcu_driver_pkg/scripts/: dcu_can_test.py  dcu_client.py  dcu_control_client.py  optimize.sh  restore.sh  setup_realtime.sh  test_motor_cmd.py  test_realtime.sh
action_ws/src/dcu_driver_pkg/src/: dcu_can_test.cpp  dcu_control_node.cpp  dcu_driver_client.cpp  dcu_driver_ros1_server.cpp  dcu_driver_server.cpp  ethercat_scan.cpp
action_ws/src/distributed_comm/: CMakeLists.txt  README.md  package.xml
action_ws/src/distributed_comm/launch/: jetson_server.launch  pc_client.launch
action_ws/src/distributed_comm/pc_control/: CMakeLists.txt  README.md
action_ws/src/distributed_comm/scripts/: ZEROTIER_README.md  net_config  network_setup.sh  network_switch.sh  scp_config  scp_transfer.sh  zerotier_setup.sh  zt_config
action_ws/src/distributed_comm/src/: jetson_bridge.cpp  jetson_controller.cpp  pc_bridge.cpp  rate_tester.cpp
action_ws/src/distributed_comm/test/: README.md  camera_bridge.launch  pc_yolo.launch
action_ws/src/maita_can_comm/: CMakeLists.txt  README.md  package.xml  start_can.sh
action_ws/src/maita_can_comm/scripts/: can_comm_client.py  can_comm_maita_server.py
action_ws/src/maita_can_comm/src/: can_comm_maita_client.cpp  can_comm_maita_server.cpp
action_ws/src/maita_can_comm/usbcan_ii_libusb_aarch64/: readme.txt  test  usbcan.py
action_ws/src/mcp2515_can_driver/: CMakeLists.txt  README.md  package.xml
action_ws/src/mcp2515_can_driver/action/: MCP2515CANComm.action
action_ws/src/mcp2515_can_driver/include/: mcp2515_driver.h
action_ws/src/mcp2515_can_driver/launch/: mcp2515_can.launch  mcp2515_can_cpp.launch
action_ws/src/mcp2515_can_driver/scripts/: mcp2515_can_client.py  mcp2515_can_server.py  mcp2515_can_server.py.bak
action_ws/src/mcp2515_can_driver/src/: mcp2515_can_client.cpp  mcp2515_can_server.cpp  mcp2515_driver.cpp
action_ws/src/mcp2515_can_driver/test/: loopback.py  track_receive_125.py  track_receive_500.py  track_receive_500_best.py
action_ws/src/mcp2515_can_driver/示例代码/: 2515.h  CAN.h  CAN0.h  Function.h  MSGMCP2515  MSGMCP2515.M51  MSGMCP2515.Uv2.bak  MSGMCP2515.hex  MSGMCP2515.lnp  MSGMCP2515.opt.bak  MSGMCP2515.plg  MSGMCP2515.uvgui.Administrator  MSGMCP2515.uvgui.lian  MSGMCP2515.uvgui_lian.bak  MSGMCP2515.uvopt  MSGMCP2515_Opt.Bak  MSGMCP2515_Uv2.Bak  MSGMCP2515_uvopt.bak  MSGMCP2515_uvproj.bak  SPI.h  STARTUP.LST  main.LST  main.c
action_ws/src/opencv_cuda_pkg/: CMakeLists.txt  README.md  package.xml
action_ws/src/opencv_cuda_pkg/action/: ColorTracking.action  ImageProcessing.action  OpenCVDetection.action  ShapeDetection.action
action_ws/src/opencv_cuda_pkg/launch/: image_processing_server.launch  opencv_detection_server.launch
action_ws/src/opencv_cuda_pkg/models/: README.md
action_ws/src/opencv_cuda_pkg/msg/: DetectionResult.msg
action_ws/src/sim2real_pkg/: CMakeLists.txt  README.md  package.xml
action_ws/src/yolov11_pkg/: CMakeLists.txt  README.md  package.xml
code_norm/: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  CODING_STANDARDS.md  README.md
code_norm/docs/adr/: adr-0002-module-architecture.md
ros_project/src/common_utils/: CMakeLists.txt
ros_project/src/communication/: CMakeLists.txt  package.xml
ros_project/src/gpio_control/: CMakeLists.txt
ros_project/src/opencv_processing/: package.xml
ros_project/src/qt5_gui/: CMakeLists.txt  package.xml
ros_project/src/reinforcement_learning/: CMakeLists.txt  package.xml
thread_project/: .gitignore  CMakeLists.txt  Makefile
thread_project/include/: Logger.h
thread_project/tests/mutex/: MutexTest.h
thread_project/tests/semaphore/: SemaphoreTest.h
thread_project/tests/thread_management/: ThreadTest.h
(+793 files in other folders)
