<?xml version="1.0"?>
<package format="2">
  <name>balance_control</name>
  <version>0.1.0</version>
  <description>Balance control algorithm for wheeled legged robot</description>

  <maintainer email="jetson@example.com">jetson</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>trajectory_msgs</depend>

  <depend>dcu_driver_pkg</depend>
  <depend>yb_imu_driver</depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>

  <export>
  </export>
</package>