<?xml version="1.0"?>
<package format="2">
  <name>distributed_comm</name>
  <version>1.0.0</version>
  <description>ROS1 distributed communication bridge between PC and Jetson Nano B01</description>
  <maintainer email="2408128687@qq.com">Qi Xiao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export></export>
</package>
