<?xml version="1.0"?>
<package format="2">
  <name>maita_can_comm</name>
  <version>1.0.0</version>
  <description>脉塔智能 USB转CAN模块V4 ROS功能包 - 支持CAN总线通信、数据收发、过滤等功能</description>

  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <author email="jetson@todo.todo">jetson</author>

  <license>MIT</license>

  <url type="website">https://github.com/maita/maita_can</url>
  <url type="bugtracker">https://github.com/maita/maita_can/issues</url>
  <url type="repository">https://github.com/maita/maita_can</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-can</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <maita_can_comm>${CATKIN_PACKAGE_SHARE_DESTINATION}</maita_can_comm>
  </export>
</package>